// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu Component Matches the snapshot 1`] = `
<body>
  <div>
    <header
      class="menu menu__open"
    >
      <nav>
        <ul
          class="menu__list"
        >
          <li
            class="menu__item"
          >
            <a
              class="menu__link"
              href="/"
            >
              Home
            </a>
          </li>
          <li
            class="menu__item"
          >
            <a
              class="menu__link"
              href="/posts"
            >
              Posts
            </a>
          </li>
          <li
            class="menu__item"
          >
            <a
              class="menu__link"
              href="/post/create"
            >
              Create Post
            </a>
          </li>
          <li
            class="menu__item"
          >
            <button
              class="button button__menu"
              data-testid="test-id-logout-button"
              type="submit"
            >
              Logout
            </button>
          </li>
        </ul>
      </nav>
      <div
        class="toggle-menu-button toggle-menu-button__show"
        data-testid="test-id-hide-menu-button"
        id="hide_menu"
      >
        <svg
          fill="#000000"
          height="25px"
          id="Capa_1"
          version="1.1"
          viewBox="0 0 490 490"
          width="25px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polygon
            points="456.851,0 245,212.564 33.149,0 0.708,32.337 212.669,245.004 0.708,457.678 33.149,490 245,277.443 456.851,490   489.292,457.678 277.331,245.004 489.292,32.337 "
          />
        </svg>
      </div>
    </header>
  </div>
</body>
`;

exports[`Menu Component Renders the snapshot without authentication 1`] = `
<body>
  <div>
    <header
      class="menu menu__open"
    >
      <nav>
        <ul
          class="menu__list"
        >
          <li
            class="menu__item"
          >
            <a
              class="menu__link"
              href="/"
            >
              Home
            </a>
          </li>
          <li
            class="menu__item"
          >
            <a
              class="menu__link"
              href="/login"
            >
              Login
            </a>
          </li>
          <li
            class="menu__item"
          >
            <a
              class="menu__link"
              href="/signup"
            >
              Signup
            </a>
          </li>
        </ul>
      </nav>
      <div
        class="toggle-menu-button toggle-menu-button__show"
        data-testid="test-id-hide-menu-button"
        id="hide_menu"
      >
        <svg
          fill="#000000"
          height="25px"
          id="Capa_1"
          version="1.1"
          viewBox="0 0 490 490"
          width="25px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polygon
            points="456.851,0 245,212.564 33.149,0 0.708,32.337 212.669,245.004 0.708,457.678 33.149,490 245,277.443 456.851,490   489.292,457.678 277.331,245.004 489.292,32.337 "
          />
        </svg>
      </div>
    </header>
  </div>
</body>
`;
